# survey-engine

./: .cursorrules  .env.backup  .env.example  .gitignore  .pre-commit-config.yaml  ANNOTATION_RAG_INTEGRATION.md  ASYNC_LOADING_IMPLEMENTATION.md  BOOTSTRAP_CONSOLIDATION_SUMMARY.md  CLEANUP_AND_REBOOT_GUIDE.md  CONSOLIDATION_MIGRATION_GUIDE.md  DEPLOY_INSTRUCTIONS.md  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.optimized  Dockerfile.postgres-pgvector  EVALUATION_STATUS_AND_ROADMAP.md  LLM_AUDIT_IMPLEMENTATION_COMPLETE.md  LLM_AUDIT_TRANSACTION_FIX.md  LLM_AUDIT_VIEWER_IMPLEMENTATION.md  LLM_RAW_RESPONSE_AUDIT_IMPLEMENTATION.md  MIGRATION_INSTRUCTIONS.md  Makefile  PHASE_1_2_COMPLETION_SUMMARY.md  RAILWAY_DEPLOYMENT.md  README.md  REGENERATION_PERFORMANCE_OPTIMIZATION.md  REGENERATION_SIMPLIFICATION.md  REGENERATION_UI_SIMPLIFICATION.md  RFQ_SIMPLIFICATION_WITH_PROMPT_INTEGRATION.md  Roadmap.md  SECTION_COMMENT_DISPLAY_FIX.md  SIMPLE_MIGRATION_GUIDE.md  SURGICAL_REGENERATION_IMPLEMENTATION_SUMMARY.md  TESTING.md  annotation-feedback-for-evals.plan.md  aws-migration-plan.md  baseline_metrics.json  before_restart.json  bootstrap_golden_pairs_stats.json  check_pgvector_support.py  (+94 more)
.claude/: settings.local.json
alembic/: env.py
aws-infrastructure/: ecs-task-definition.json
docs/: AIRA_V1_EVALUATION_QUESTIONS.md  AiRA_Evaluation_Framework_v1.md  CONTAINER_DEPLOYMENT_GUIDE.md  DATABASE_SETUP.md  DOCKER_QUICKSTART.md  DOCX_TO_RFQ_AUTOFILL_DESIGN.md  EVALUATION_ENHANCEMENT_ROADMAP.md  EVALUATION_STATUS_CURRENT.md  EVALUATION_TODO.md  FRONTEND_STYLE_GUIDE.md  GE_QNR1_CH_BS_22Sep.docx  GE_QNR2_CE_BS_21Sep.docx  LLM_AUDIT_FOR_EVALUATIONS.md  MULTI_LEVEL_RAG_PRODUCTION_DEPLOYMENT.md  PILLAR_RULES_IMPLEMENTATION_SUMMARY.md  RAILWAY_DEPLOYMENT_NO_ALEMBIC.md  RAILWAY_DEPLOYMENT_WITH_CANCELLATION.md  README_FULLSTACK.md  Roadmap.md  SURVEY_FAILURE_DIAGNOSIS.md  TESTING.md  TODO.md  annotation-feedback-loop.md  regeneration_code_review.md  survey_engine_project_context.md
evaluations/: Eval_Framework.xlsx  __init__.py  consolidated_rules_integration.py  evaluation_runner.py  llm_client.py  pillar_based_test_cases.py  pillar_rules_integration.py  rules_redundancy_analysis.py  run_evaluations.sh  survey_engine_backup_20250913.sql  test_advanced_evaluator.py  test_advanced_methodological_rigor.py  test_api_integration.py  test_cases.py  test_integrated_pillar_system.py  test_phase1_implementation.py  test_pillar_rules_integration.py  utils.py
frontend/: Dockerfile  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
migrations/: 000_bootstrap_complete_schema.sql  000_bootstrap_complete_schema.sql.backup  000_bootstrap_minimal.sql  000_bootstrap_simple.sql  003_add_survey_rules.sql  004_add_pillar_rules.sql  004_add_title_to_golden_pairs.sql  004_add_unique_constraints.sql  005_consolidate_quality_rules_to_pillars.sql  005_fix_unique_constraints.sql  006_add_pillar_scores.sql  007_add_annotation_tables.sql  008_update_annotation_tables_pillars.sql  010_add_settings_table.sql  011_add_workflow_states.sql  012_add_document_uploads.sql  012_add_llm_audit_system.sql  013_add_golden_content_usage_tracking.sql  013_add_old_new_fields_to_llm_audit.sql  014_add_human_review_prompt_editing.sql  014_create_qnr_taxonomy_tables.sql  015_fix_duplicate_rules.sql  015_seed_qnr_labels.py  016_add_section_id_to_golden_questions.sql  016_fix_duplicate_rules_with_fk_handling.sql  018_update_survey_status_constraint.sql  023_enable_pgvector_railway.sql  (+22 more)
(+412 files in other folders)
