[project]
name = "survey-engine"
version = "0.1.0"
description = "Transform RFQs into researcher-ready surveys using AI with golden standards"
authors = [{name = "Survey Engine Team"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "replicate>=0.15.0",
    "sentence-transformers>=2.2.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.40",
    "pgvector>=0.2.4",
    "redis>=5.0.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "psycopg2-binary>=2.9.10",
    "greenlet>=3.2.4",
    "python-multipart>=0.0.20",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "mypy>=1.17.1",
]
